--- a/ex010/index.html
+++ b/ex010/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Usando links externos</h1>
     <p>Você pode acessar meu <a href=" https://github.com/brizola182738-pixel" target="_blank" rel="external">repositório público no Github</a></p>
+    <h2>Usando links internos</h2>
+    <p>Esta é a primeira página do meu site, se Você quiser pode acessa a minha <a href="Pag002.html" rel="next" target="_self">Segunda página</a></p>
+    <p>Você tambem pode acessar a nossa <a href="pag003.html" rel="next" target="_self">pagina de notícias</a></p>
 </body>
 </html>
