--- a/ex012/index.html
+++ b/ex012/index.html
@@ -16,6 +16,9 @@
     <p>Seu navegador não tem compatibilidade com reprodução de videos</p>
 </video>
 <h1>Inserindo videos do YouTUbe</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jPWsBuiy1rE?si=r0NMjoYckBitJCLS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XNcBUpnAcCs?si=PKtJonu0XDZsKcm5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1>inserindo videos com Vimeo</h1>
+<iframe title="vimeo-player" src="https://player.vimeo.com/video/794298261?h=f370c4fde3" width="560" height="315" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"   allowfullscreen></iframe>
+
 </body>
 </html>
